--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
             <div class="about-grid">
                 <div style="display: flex; align-items: center; justify-content: center;">
                     <div style="width: 300px; height: 300px; background: var(--bg-primary); border: 2px solid var(--border); border-radius: 0.75rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-                        <img src="https://via.placeholder.com/300x300?text=Your+Photo" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="https://media.licdn.com/dms/image/v2/D5603AQFzZDe75y79oQ/profile-displayphoto-scale_200_200/B56ZsTp384I0AU-/0/1765561304833?e=1772064000&v=beta&t=9niEM8l0f6T8Q9nzzqT3crN04Ukae8j9jJXkaLGJT6o" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
                 
